--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,61 @@
-* {
+*, h1 {
 	font-size: 16px;
 	font-family: monospace;
-	padding: 0px;
-	margin: 0px;
+	/* font-family: Courier New, Monaco, monospace; */
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.h1{
-	text-align: left;
-}
 body {
-	background-color: #DCDCDC;
+	background-color: #708090;
 	display: flex;
 	flex-direction: column;
 }
 
+.content {
+	padding: 20px;
+}
+
+.title-container {
+	width: 720px;
+	margin: 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+}
+
+h1 { 
+	background-color: darkgray;
+	margin: 0;
+	padding: 5px 20px;
+	font-size: 1.75em;
+	font-weight: 550;
+	border-radius: 20px 20px 0 0;
+}
+
+h1.selected {
+	background-color: #F5F5F5;
+}
+
+.content-ui {
+	background-color: #F5F5F5;
+	border-radius: 0 10px 10px 10px;
+	padding: 20px;
+}
+
 .graph-container {
-	max-width: 720px;
-	height: 400px;
+	width: 720px;
+	height: 450px;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: flex-end;
-	margin: 20px 0px 10px;
+	padding: 20px 0px 10px;
 }
 
 .bar {
 	background-color: lightgray;
 	width: 30px;
 	margin: 1px;
-	border: 1px solid darkgray;
 	transition: height 0.25s ease-out;
 }
 
@@ -38,23 +64,29 @@ body {
 	flex-direction: column;
 }
 
-.sort-section {
+.section--sort {
 	margin: 0px 0px 10px;
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-between;
 	
 }
 
-.generate-section {
+.section--generate {
 	margin: 10px 0px 10px;
-	border: 2px solid black;
+	display: flex;
+	align-items: baseline;
+	justify-content: space-between;
+	background-color: lightgray;
+	padding: 10px
 }
 
 button {
 	background-color: darkgray;
+	margin: 0px;
 	border: 0;
-	padding: 5px;
+	border-radius: 5px;
+	padding: 8px 10px;
 	color: white;
 }
 
@@ -69,3 +101,51 @@ button:active {
 .button-selected {
 	background: indianred;
 }
+
+.button-selected:hover {
+	background: indianred;
+}
+
+.button--refresh {
+	padding: 5px 10px;
+	border-radius: 3px;
+}
+
+.slide-container {
+  width: 80%;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background: white;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #008B8B;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
